# serpentine

./: .claudeignore  .gitignore  .serpentine.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  SECURITY.md  Tiltfile  pyproject.toml
.claude/commands/: serpentine.md  spec.md  ui-check.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  ui-check.mjs  vite.config.ts
frontend/app/: globals.css
frontend/src/: CLAUDE.md  main.tsx  store.ts
frontend/src/app/: App.tsx  CLAUDE.md  actors.ts  bus.ts  events.ts  providers.tsx  queryClient.ts  wsMachine.ts
frontend/src/domains/: CLAUDE.md
frontend/src/domains/graph/: index.ts
frontend/src/domains/graph/api/: index.ts  mappers.ts
frontend/src/domains/graph/lib/: bezier.ts  collision.ts  edgeUtils.ts  elkConversion.ts  layout.ts  layoutPersistence.ts  layoutWorker.ts  movement.ts  nodeUtils.ts  selectionAndHighlighting.ts
frontend/src/domains/graph/model/: layoutTypes.ts  slice.ts  types.ts
frontend/src/domains/pdg/: index.ts
frontend/src/domains/pdg/lib/: expandReferenceNodes.ts  layout.ts
frontend/src/domains/pdg/model/: slice.ts  types.ts
frontend/src/domains/search/: index.ts
frontend/src/domains/search/lib/: filter.ts
frontend/src/domains/search/model/: slice.ts  types.ts
frontend/src/pages/: GraphPage.tsx
frontend/src/ui/components/: DetailPanel.tsx  ExportButton.tsx  Graph.tsx  GraphContainer.tsx  LoadingOverlay.tsx  SearchBar.tsx  Shell.tsx  Sidebar.tsx
frontend/src/ui/components/Header/: LogoTitle.tsx  (+2 more)
frontend/src/ui/lib/: ThemeContext.tsx  graphTheme.ts  nodeStyles.ts  svgToPng.ts  theme.ts
rust/: CLAUDE.md  Cargo.toml
rust/src/: events.rs  lib.rs  message_bus.rs
rust/src/graph/: builder.rs  loaders.rs  mod.rs  pdg.rs  resolvers.rs
rust/src/javascript/: config.rs  mod.rs
rust/src/python/: config.rs  mod.rs
rust/src/rust_lang/: config.rs  mod.rs
rust/src/subscribers/: README.md  code_snippet.rs  definitions.rs  event_counter.rs  imports.rs  mod.rs  pdg.rs  raw_bindings.rs  scope_tree.rs  uses.rs
src/: CLAUDE.md
src/analyzer/: __init__.py
src/serpentine/: __init__.py  _analyzer.pyi  cache.py  cli.py  config.py  selector.py  state.py  watcher.py
src/serpentine/server/: __init__.py  app.py  routes.py  websocket.py
src/test_package/: app.py  test.json
(+18 files in other folders)
