[project]
name = "serpentine"
version = "0.1.1"
description = "Fast dependency graph analysis and visualization for Python, JavaScript/TypeScript, and Rust projects"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENCE" }
authors = [
    { name = "Christopher Garretty" },
]
keywords = ["dependency-graph", "visualization", "static-analysis", "python", "javascript", "rust", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "watchdog>=6.0.0",
    "click>=8.1.0",
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/serpentine-parser/serpentine"
Repository = "https://github.com/serpentine-parser/serpentine"
Issues = "https://github.com/serpentine-parser/serpentine/issues"

[project.scripts]
serpentine = "serpentine.cli:main"

[build-system]
requires = ["maturin>=1.9.4"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
cargo-extra-args = "--manifest-path=rust/Cargo.toml"
module-name = "serpentine._analyzer"
python-source = "src"
# Include static frontend files in the package
include = [
    { path = "src/serpentine/static/**/*", format = "sdist" },
    { path = "src/serpentine/static/**/*", format = "wheel" },
]

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pytest>=8.0.0",
]
