[package]
name = "serpentine"
version = "0.1.3"
edition = "2021"

[lib]
name = "serpentine"
crate-type = ["cdylib"]

[dependencies]
tree-sitter = "0.20"
tree-sitter-python = { version = "0.20", default-features = false }
tree-sitter-javascript = { version = "0.20", default-features = false }
tree-sitter-typescript = { version = "0.20", default-features = false }
tree-sitter-rust = { version = "0.20", default-features = false }
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py312"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
